--- a/meltano.yml
+++ b/meltano.yml
@@ -19,8 +19,8 @@ plugins:
       start_date: '2010-01-01T00:00:00Z'
     settings:
     # TODO: To configure using Meltano, declare settings and their types here:
-    - name: username
-    - name: password
+    - name: client_id
+    - name: client_secret
       kind: password
     - name: start_date
       value: '2010-01-01T00:00:00Z'
